// Copyright 2019 Lightbend Inc.

// This is the public API offered by the ProductPopularty Value Entity.

syntax = "proto3";

package shopping.product.api;

option java_outer_classname = "ProductApi";

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";

message IncreasePopularity {
  string productId = 1 [(akkaserverless.field).entity_key = true];
  int32 quantity = 2;
}

message DecreasePopularity {
  string productId = 1 [(akkaserverless.field).entity_key = true];
  int32 quantity = 2;
}

message GetProductPopularity {
  string productId = 1 [(akkaserverless.field).entity_key = true];
}

message Popularity {
  string productId = 1;
  int32 score = 2;
}

// service popularity
service ProductPopularityService {
  rpc Increase(IncreasePopularity) returns (google.protobuf.Empty);
  rpc Decrease(DecreasePopularity) returns (google.protobuf.Empty);
  rpc GetPopularity(GetProductPopularity) returns (Popularity);
}
